--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,11 @@ bootJar {
 dependencies {
     // netflix hystrix - for dealing with fault tolerances
     compile group: 'com.netflix.hystrix', name: 'hystrix-javanica', version: '1.4.0-RC1'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.0.1.RELEASE'
 
     // testing
     testCompile group: 'junit', name: 'junit', version: '4.8.+'
-    testImplementation 'org.mockito:mockito-core:2.7.22'
+    testImplementation 'org.mockito:mockito-core:2.15.0'
 
     implementation 'org.springframework.boot:spring-boot-dependencies:2.0.5.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
